# sf-package-buildpack-rs

./: .gitignore  Cargo.toml  Makefile.toml  README.md  buildpack.toml
lib/x86_64-darwin/: cli
lib/x86_64-unknown-linux-musl/: cli
src/: base.rs  build.rs  cli.rs  client.rs  data.rs  detect.rs  lib.rs  main.rs  publish.rs  test.rs
src/data/: buildpack_toml.rs  runtime.rs
src/layers/: mod.rs  sfdx.rs
src/util/: config.rs  enc_file.rs  error.rs  fetch.rs  files.rs  heroku.rs  logger.rs  meta.rs  mod.rs
tests/: build_test.rs  build_tests.rs  heroku.rs
tests/fixtures/sf-package/: .gitignore  app.toml  sfdx-project.json
tests/fixtures/sf-package/assets/: hub.key.enc
tests/fixtures/sf-package/config/: project-scratch-def.json
tests/fixtures/sf-package/force-app/main/default/classes/: SomeCallable.cls  SomeCallableTest.cls  Test.cls  TestTests.cls
tests/fixtures/sf-package/force-app/main/default/objects/Test__c/: Test__c.object-meta.xml
tests/fixtures/sf-package/force-app/main/default/objects/Test__c/fieldSets/: Test.fieldSet-meta.xml
tests/fixtures/sf-package/force-app/main/default/objects/Test__c/fields/: Test__c.field-meta.xml
