[package]
name = "sf-package-buildpack"
version = "0.0.0"
edition = "2018"
license = "MIT"
rust-version = "1.56"

[dependencies]
anyhow = "1"
flate2 = "1"
json = "0.12"
"libcnb" = { path = "../libcnb-rs", features = ["anyhow"] }
openssl = { version = "0.10.36", features = ["vendored"] }
regex = "1.5.4"
reqwest = { version = "0.10", features = ["blocking"] }
serde = "1.0.126"
sha2 = "0.9"
tar = "0.4"
tempfile = "3"
termcolor = "1.1"
thiserror = "1.0"
toml = "0.5"
walkdir = "2.3.2"
xz = "0.1.0"

[dev-dependencies]
assert_matches = "1.5.0"
tempfile = "^3.2.0"
