[package]
name = "sf-package-buildpack"
version = "0.0.0"
edition = "2018"
license = "MIT"
rust-version = "1.56"

[dependencies]
anyhow = "^1.0.42"
flate2 = "1"
json = "0.12"
"libcnb" = { git = "https://github.com/michaelhoefer/libcnb.rs" }
openssl = { version = "0.10.36", features = ["vendored"] }
serde = "1.0.126"
serde_json = "1.0.70"
tempfile = "3"
termcolor = "1.1"
thiserror = "1.0"
toml = "0.5"
chrono = "0.4.19"
reqwest = { version = "0.10", features = ["blocking", "json"] }

[dev-dependencies]
assert_matches = "1.5.0"
tempfile = "^3.2.0"
